--- a/conf/dir.yaml
+++ b/conf/dir.yaml
@@ -1,8 +1,8 @@
 
 dir:
-  project: C:\Users\jsyoo\Mirror\BMI Lab\Research\EMG\code_publish
+  project: ${hydra:runtime.cwd}
   data_raw: ${dir.project}/data/raw
 
 
   data_processed: ${dir.project}/data/processed # Where the signal segments are
-  data_cohort: ${dir.data_processed}/cohort.csv # Where the signal segment summary is
+  data_cohort: ${dir.data_processed}/cohort_signal.csv # Where the signal segment summary is
